# rust-in-action

./: .gitignore  Cargo.toml  README.md  SUMMARY.md  rust-safe.md
part1/my_criterion/: Cargo.toml
part1/my_criterion/benches/: my_bench.rs
part1/my_criterion/src/: lib.rs
part10/qa-project/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile-dev  Dockerfile-gateway  Makefile  app-gw.yaml  app.yaml  qa.sql  readme.md  supervisor-install.md
part10/qa-project/clients/go/: client.go
part10/qa-project/clients/go/pb/: qa.pb.go  qa_grpc.pb.go
part10/qa-project/clients/nodejs/: app.js
part10/qa-project/clients/nodejs/pb/: qa_grpc_pb.js  qa_pb.js
part10/qa-project/clients/php/: centos7-php-grpc.md  qa.php  readme.md
part10/qa-project/clients/php/GPBMetadata/: Qa.php
part10/qa-project/clients/php/Qa/: AddAnswerReply.php  AddAnswerRequest.php  AddQuestionReply.php  AddQuestionRequest.php  AnswerAgreeReply.php  AnswerAgreeRequest.php  AnswerEntity.php  AnswerListReply.php  AnswerListRequest.php  DeleteAnswerRequest.php  DeleteQuestionRequest.php  LatestQuestionsReply.php  LatestQuestionsRequest.php  QAServiceClient.php  QuestionDetailRequest.php  QuestionEntity.php  QuestionReadCountReply.php  QuestionReadCountRequest.php  UpdateAnswerRequest.php  UpdateQuestionReply.php  UpdateQuestionRequest.php  UserLoginReply.php  UserLoginRequest.php  UserLogoutReply.php  UserLogoutRequest.php  UserRegisterReply.php  UserRegisterRequest.php  VerifyTokenReply.php
part10/qa-project/config/: app-gw.yaml  app.yaml
part10/qa-project/crates/gateway/: Cargo.toml
part10/qa-project/crates/gateway/src/: main.rs
part10/qa-project/crates/infras/: Cargo.toml
part10/qa-project/crates/pb/: Cargo.toml
part10/qa-project/crates/qa-svc/: Cargo.toml  app.yaml  build.rs
part10/qa-project/gateway/: Cargo.toml
part10/qa-project/gateway/src/: main.rs
part10/qa-project/infras/: Cargo.toml
part10/qa-project/infras/src/: lib.rs
part10/qa-project/proto/: qa.proto
part10/qa-project/qa-svc/: Cargo.toml  build.rs
part10/qa-project/qa-svc/src/: main.rs
part10/qa-project/scripts/: docker-cargo-build.sh  docker-rust-dev.sh  go-gen.sh  php-gen.sh  qa-svc.ini
part10/qa-sys/: Cargo.toml  app.yaml  build.rs  go.mod  readme.md
part10/qa-sys/proto/: qa.proto
part10/qa-sys/src/: main.rs
part10/qa-sys/src/config/: app.rs
part10/qa-sys/src/infras/: mod.rs  xpulsar.rs
part11/qa-project/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile-dev  Dockerfile-gateway  Makefile  app.yaml  centos-install-grafana.md  centos-superviosr-install.md  go.mod  go.sum  logger_module.md  mac-install-grafana.md  mac-install-prometheus.md  mac-supervisor-install.md  protoc-install.md  qa-gateway.ini  qa-svc.ini  readme.md  ubuntu-install-prometheus.md
part11/qa-project/clients/go/: client.go
part11/qa-project/clients/nodejs/: package.json
part11/qa-project/clients/php/: centos-php-grpc.md  composer.json  composer2.json  mac-php-grpc.md  qa.php  readme.md
part11/qa-project/config/: app-gw.yaml  app.yaml
part11/qa-project/crates/gateway/: Cargo.toml  app-gw.yaml
part11/qa-project/crates/infras/: Cargo.toml
part11/qa-project/crates/pb/: Cargo.toml
part11/qa-project/crates/qa-svc/: Cargo.toml  app.yaml  build.rs  entity_read_count.md  qa_vote.md  user_vote.md  vote_job.md  vote_message.md
part11/qa-project/proto/: qa.proto
part11/qa-project/scripts/: docker-rpc-build.sh  go-gen.sh  nodejs-gen.sh  php-gen.sh  pulsar-run.sh
part2/readfile-custom/: .gitignore  Cargo.toml  LICENSE  readme.md
part2/readfile-custom/src/: custom_error.rs  main.rs
part3/serde-custom/: Cargo.toml
part3/serde-custom/src/: app.rs  main.rs
part4/hello-axum/: Cargo.toml
part4/hello-axum/src/: main.rs
part4/hello-echo/: Cargo.toml
part4/hello-echo/src/: main.rs  server.rs
part4/short-url/: Cargo.toml
part4/short-url/src/: handlers.rs  main.rs
part5/gen-table/: .gitignore  Cargo.toml  user.sql
part5/gen-table/src/: engine.rs  main.rs  sql_type.rs
part6/logrote-service/: Cargo.toml
part6/logrote-service/src/: main.rs  systime-output.rs
part7/article-svc/: Cargo.toml  app.yaml  article.sql  readme.md
part7/article-svc/src/: job.rs  main.rs
part7/article-svc/src/config/: app.rs  mod.rs  mysql.rs  xredis.rs
part7/article-svc/src/entity/: article.rs  mod.rs
part7/article-svc/src/handlers/: article.rs  mod.rs
part7/article-svc/src/infras/: config.rs  xmysql.rs  xredis.rs
part7/article-svc/src/routers/: mod.rs  router.rs
part7/redis-demo/: Cargo.toml  redis-cluster-op.md
part7/redis-demo/src/: main.rs  xredis.rs
part7/sqlx-demo/: Cargo.toml
part7/sqlx-demo/migrations/: 20240320142623_users.sql
part7/sqlx-demo/src/: main.rs
part8/points-svc/: Cargo.toml  app.yaml  layout.md  point-message.md  point-message.md.rs  points.sql  points_add.sql
part8/points-svc/scripts/: points.sql
part8/points-svc/src/: job.rs  main.rs
part8/points-svc/src/config/: app.rs  mod.rs  mysql.rs  xpulsar.rs
part8/points-svc/src/entity/: members.rs  mod.rs  points_details.rs  points_message.rs
part8/points-svc/src/handlers/: index.rs  mod.rs
part8/points-svc/src/infras/: config.rs  mod.rs  xmysql.rs  xpulsar.rs
part8/points-svc/src/routers/: router.rs
part8/pulsar/pulsar-demo/: Cargo.toml  pulsar-message-impl.md
part8/pulsar/pulsar-demo/src/: consumer.rs  main.rs  xpulsar.rs
part9/native_counter/: .gitignore  Cargo.toml  README.md  main.js  neon-design.md  package-lock.json  package.json
part9/native_counter/src/: lib.rs
part9/qt-in-action/cxx-qt-app/: Cargo.toml  build.rs  main-qml.md
part9/qt-in-action/cxx-qt-app/qml/: main.qml
part9/qt-in-action/cxx-qt-app/src/: cxxqt_object.rs  main.rs
part9/qt-in-action/cxx-qt-md5/: Cargo.toml
part9/qt-in-action/qmeta-app/: Cargo.toml
part9/qt-in-action/qmeta-app/qml/: main.qml
part9/qt-in-action/qmeta-app/src/: main.rs  my_object.rs
part9/string_utils/: .gitignore  Cargo.toml  readme.md
part9/string_utils/python-project/: main.py
part9/string_utils/python-project/string_utils/: __init__.py
part9/string_utils/src/: lib.rs
(+539 files in other folders)
