[package]
name = "my_criterion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.5.1"

# 新增bench属性用于第三方基准测试包criterion bench基准测试
[[bench]]
name = "my_bench"
harness = false # 禁用rust内置的基准测试工具
