[workspace]
resolver = "2"

# 定义项目的crates
members = [
    "crates/qa-svc",
    "crates/infras",
    "crates/pb",
    "crates/gateway"
]

# 共享package配置项
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["daheige"]
description = "a highly concurrent question answering system"

[workspace.dependencies]
# grpc微服务相关组件
tonic = "0.11.0"
prost = "0.12.6"
tokio = {version = "1.38.0",features = ["full"]}

# tonic-reflection主要用于grpcurl工具查看grpc微服务接口协议定义
# note: Must be the same as the tonic version
tonic-reflection = "0.11.0"

# tonic-build包用于构建grpc代码
# note: Must be the same as the tonic version
tonic-build = "0.11.0"

# 网关使用axum http框架接入
axum = { version = "0.7.5"}

# json序列化处理
serde = { version = "1.0.203",features = ["derive"]}
serde_json = "1.0.117"

# 配置文件读取以及用于消息序列化和反序列化处理
serde_yaml = "0.9.33"
once_cell = "1.19.0"

# 操作日志
log = "0.4.21"
env_logger = { version = "0.11.3",features = ["color"] }

# tracing追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# chrono用于时间处理
chrono = "0.4.38"

# sqlx用于数据库操作
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "mysql", "chrono", "time"] }

# pulsar消息队列相关crate
futures = "0.3.30"
pulsar = "6.3.0"

# redis操作库
redis = { version ="0.25.4",features = ["r2d2","tokio-comp","cluster","cluster-async","json"]}
# r2d2用于redis连接池管理
r2d2 = "0.8.10"

# anyhow 用于错误处理，它是Rust中的一个库，旨在提供灵活的、具体的错误处理能力
anyhow = "1.0.86"

#uuid
uuid = { version = "1.8.0", features = ["serde", "v4"] }

#validator
validator = { version = "0.18.1", features = ["derive"] }
async-trait = "0.1.80"
thiserror = "1.0.61"

# body util
http-body-util = "0.1.1"

# autometrics-rs 用于自动prometheus metrics服务可观测性
autometrics = {version = "1.0.1",features = ["prometheus-exporter"]}


