[workspace]
resolver = "3" # resolver为3表示在Rust 2021基础上进一步优化，改进特性解析和更严格的版本依赖检测

# 定义项目的crates
members = [
    "crates/qa-svc",
    "crates/infras",
    "crates/pb",
    "crates/gateway"
]

# 共享package配置项
[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["daheige"]
description = "a highly concurrent question answering system"

[workspace.dependencies]
# gRPC微服务所需要的相关组件
tonic = "0.14.2"
prost = "0.14.1"
tokio = { version = "1.47.1", features = ["full"] }

# tonic-reflection主要用于grpcurl工具查看grpc微服务接口协议定义
# note: Must be the same as the tonic version
tonic-reflection = "0.14.2"

# tonic-prost-build 包用于构建grpc代码
# note: Must be the same as the tonic version
tonic-prost-build = "0.14.2"
tonic-prost = "0.14.2"

# 网关使用axum http框架接入
axum = { version = "0.8.4" }

# json序列化处理
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

# 配置文件读取以及用于消息序列化和反序列化处理
serde_yaml = "0.9.33"
once_cell = "1.21.3"

# 操作日志
log = "0.4.27"
env_logger = { version = "0.11.8", features = ["color"] }

# tracing追踪
#tracing = "0.1"
#tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# chrono用于时间处理
chrono = "0.4.41"

# sqlx用于数据库操作
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono", "time"] }

# pulsar消息队列相关crate
futures = "0.3.31"
pulsar = "6.3.1"

# redis操作库
redis = { version = "0.32.5", features = ["r2d2", "tokio-comp", "cluster", "cluster-async", "json"] }
# r2d2用于redis连接池管理
r2d2 = "0.8.10"

# anyhow 用于错误处理，它是Rust中的一个库，旨在提供灵活的、具体的错误处理能力
anyhow = "1.0.99"

# uuid
uuid = { version = "1.18.1", features = ["serde", "v4"] }

# md5
md5 = "0.8.0"

# validator
validator = { version = "0.20.0", features = ["derive"] }

# async trait
async-trait = "0.1.89"

# body util
http-body-util = "0.1.3"

# crypto
rust-crypto = "0.2.36"
base64 = "0.22.1"

# autometrics-rs 用于自动prometheus metrics服务可观测性
autometrics = { version = "2.0.0", features = ["prometheus-exporter"] }
