[package]
name = "readfile-custom"
version = "0.1.0"
edition = "2021"
authors = ["daheige"]
description = "read file content by cli"
keywords = ["read-file", "custom-error",]
readme = "README.md"
license = "MIT"
repository = "https://github.com/daheige/rust-in-action"
documentation = "https://docs.rs/readfile-custom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
