[package]
name = "readfile-custom"
version = "0.1.1"
edition = "2021"
authors = ["daheige"]
description = "read file content by cli"
keywords = ["read-file", "custom-error",]
readme = "README.md"
license = "MIT"
repository = "https://github.com/daheige/rust-in-action"
documentation = "https://docs.rs/readfile-custom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 如果有依赖就添加对应的依赖包，格式：rand = "0.8.5"
