[package]
name = "hello-echo"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello-server"
path = "src/server.rs"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.13.2", features = ["attributes"] }
serde = { version = "1.0.219", features = ["derive"] }
