[package]
name = "gen-table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.20.2"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "mysql", "chrono", "time"] }
tokio = { version = "1.41.1", features = ["full"] }
futures = "0.3.31"
clap = "4.5.21"
serde = { version = "1.0.215", features = ["derive"] }
