[package]
name = "gen-table"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.21.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono", "time"] }
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
clap = "4.5.26"
