[package]
name = "redis-demo"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# redis操作库
redis = { version = "0.32.5", features = ["r2d2", "tokio-comp", "cluster", "cluster-async", "json"] }
# r2d2用于redis连接池管理
r2d2 = "0.8.10"
# tokio异步运行时
tokio = { version = "1.47.1", features = ["full"] }
# anyhow 用于错误处理，它是Rust中的一个库，旨在提供灵活的、具体的错误处理能力
anyhow = "1.0.99"