[package]
edition = "2021"
name = "sqlx-demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
futures = "0.3.31"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "mysql", "chrono", "time"] }
tokio = { version = "1.42.0", features = ["full"] }
