[package]
name = "sqlx-demo"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono", "time"] }
tokio = { version = "1.47.1", features = ["full"] }
