[package]
name = "native_counter"
version = "0.1.0"
description = "Count the number of words"
authors = ["daheige"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 使用napi-6版本的特性
neon = { version = "1.0.0", features = ["napi-6"] }
