[package]
name = "native_counter"
version = "0.1.0"
description = "Count the number of words"
authors = ["daheige"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
# 这里设置为cdylib表示编译成一个和C语言二进制接口ABI兼容的动态链接库。
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = { version = "1.0.0", features = ["napi-6"] }
