[package]
name = "infras"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# json序列化处理
serde = { version = "1.0.192",features = ["derive"]}
serde_json = "1.0.108"

# 配置文件读取以及用于消息序列化和反序列化处理
serde_yaml = "0.9.33"

# sqlx用于数据库操作
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "mysql", "chrono", "time"] }

# pulsar消息队列相关crate
pulsar = "6.1.0"