[package]
name = "infras"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 序列化处理
serde = { workspace = true,features = ["derive"]}

# 配置文件读取以及用于消息序列化和反序列化处理
serde_yaml = { workspace = true }

# sqlx用于数据库操作
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "mysql", "chrono", "time"] }

# pulsar消息队列相关crate
pulsar = { workspace = true }