[package]
name = "pulsar-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pulsar-demo-consumer"
path = "src/consumer.rs"

[dependencies]
# pulsar操作依赖的库
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
pulsar = "6.3.0"

# 用于消息序列化和反序列化处理
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

# 操作日志库
log = "0.4.22"
env_logger = "0.11.5"
