[package]
name = "pulsar-demo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pulsar-demo-consumer"
path = "src/consumer.rs"

[dependencies]
# pulsar操作依赖的库
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.31"
pulsar = "6.6.0"

# 用于消息序列化和反序列化处理
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# 操作日志库
log = "0.4.29"
env_logger = "0.11.8"
