[package]
name = "cxx-qt-app"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.122"
cxx-qt = "0.6.1"
cxx-qt-lib = "0.6.1"
rand = "0.8.5"

# 项目构建时所需要的依赖包
[build-dependencies]
# 这个包需要和cxx-qt包版本一致
cxx-qt-build = "0.6.1"
