[package]
name = "cxx-qt-app"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.174"
cxx-qt = "0.7.2"
cxx-qt-lib = { version = "0.7.2", features = ["qt_full"] }
rand = "0.9.2"

# 项目构建时所需要的依赖包
[build-dependencies]
# 这个包需要和cxx-qt包版本一致
cxx-qt-build = { version = "0.7.2", features = ["link_qt_object_files"] }
