[package]
name = "cxx-qt-md5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.107"
cxx-qt = "0.5.3"
cxx-qt-lib = "0.5.3"
md5 = "0.7.0"

# 项目构建时所需要的依赖包
[build-dependencies]
cxx-qt-build = "0.5.3"

