[package]
name = "infras"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
# 序列化处理
serde = { workspace = true, features = ["derive"] }

# 配置文件读取以及用于消息序列化和反序列化处理
serde_yaml = { workspace = true }

# sqlx用于数据库操作
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "mysql", "chrono", "time"] }

# pulsar消息队列相关crate
pulsar = { workspace = true }

# redis操作库
redis = { workspace = true, features = ["r2d2","tokio-comp","cluster","cluster-async","json"] }
# r2d2用于redis连接池管理
r2d2 = { workspace = true }

# 操作日志
log = { workspace = true }
env_logger = { workspace = true, features = ["color"] }

# chrono用于时间处理
chrono = { workspace = true }

# tokio运行时
tokio = { workspace = true }

# prometheus metrics
autometrics = { workspace = true }
# metrics http framework
axum = { workspace = true }
